--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,24 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="15dp"
+        android:text="toppings"
+        android:textAllCaps="true"
+        android:textSize="16sp" />
+
+    <CheckBox
+        android:id="@+id/whipped_cream_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:paddingLeft="16dp"
+        android:text="Wipped cream"
+        android:textSize="16sp" />
+
+    <TextView
         android:id="@+id/quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,7 +33,7 @@
         android:layout_marginBottom="5dp"
         android:text="Quantity"
         android:textAllCaps="true"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -38,7 +56,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:text="1"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/positive"
@@ -57,7 +75,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="5dp"
         android:text="ORDER SUMMARY"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/order_summary_text_view"
@@ -66,7 +84,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="8dp"
         android:text="Total:$"
-        android:textSize="30sp" />
+        android:textSize="20sp" />
 
     <Button
         android:layout_width="wrap_content"
